--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,10 @@
   </head>
 
   <body>
-    <%= yield %>
+
+  <%= render partial: "shared/navbar" %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
