--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,3 @@
-<div class="d-flex justify-content-center align-items-center py-5">
+<div class="d-flex justify-content-center align-items-center mt-5">
     <h1>Welcome to e Tech Solutions</h1>
 </div>
